--- a/ecom/eshop/templates/admin/admindashboard.html
+++ b/ecom/eshop/templates/admin/admindashboard.html
@@ -5,15 +5,15 @@
 
 <div class="grid grid-cols-3 gap-10 px-[10%]">
     <div class="bg-green-500 text-white rounded-[50%] p-10 text-center">
-        <h2 class="text-3xl">40+</h2>
+        <h2 class="text-3xl">{{totalorders}}</h2>
         <h2 class="text-xl">Total orders</h2>
     </div>
     <div class="bg-pink-500 text-white rounded-[50%] p-10 text-center">
-        <h2 class="text-3xl">40+</h2>
+        <h2 class="text-3xl">{{totalproducts}}</h2>
         <h2 class="text-xl">Total Products</h2>
     </div>
     <div class="bg-yellow-500 text-white rounded-[50%] p-10 text-center">
-        <h2 class="text-3xl">40+</h2>
+        <h2 class="text-3xl">{{totaluser}}</h2>
         <h2 class="text-xl">Total users</h2>
     </div>
 </div>
